@@ -10,6 +10,7 @@ import org.apache.spark.sql.streaming.StreamingQueryException;
 
 public class SparkResultStoreService {
 
+	// Add --add-exports java.base/sun.nio.ch=ALL-UNNAMED to VM arguments
     public static void main(String[] args) throws StreamingQueryException, TimeoutException {
         SparkSession spark = SparkSession.builder()
                 .appName("SparkResultStoreService")
@@ -35,14 +36,14 @@ public class SparkResultStoreService {
                 .start();
 
         // Write to S3
-        StreamingQuery s3Query = values.writeStream()
+        /*StreamingQuery s3Query = values.writeStream()
                 .outputMode("append")
                 .format("parquet")
                 .option("path", "s3a://your-bucket/path/to/output")
                 .option("checkpointLocation", "s3a://your-bucket/path/to/checkpoint")
-                .start();
+                .start();*/
 
         hdfsQuery.awaitTermination();
-        s3Query.awaitTermination();
+        //s3Query.awaitTermination();
     }
 }
